# survival-analysis-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: covariates.yaml  paths.yaml  plots.yaml
data/raw/: README.md  hr_sensibility.csv  survival_data_complemented.csv
data/reference/: variable_levels_combined.xlsx
src/survival_analysis/: __init__.py  _constants.py  agents.py  clusters.py  config.py  cox.py  data.py  io.py  km.py  preprocessing.py  quantiles.py
src/survival_analysis/cli/: _models.py  agents.py  all.py  clusters.py  cox.py  hr_sensitivity.py  km.py  quantiles.py
src/survival_analysis/plots/: __init__.py  forest.py  km.py  sensitivity.py  style.py
tests/: test_backward_aic.py  test_cox.py  test_data_loading.py  test_io.py  test_preprocessing.py
validation/: compare_outputs.py  export_reference.R
validation/baseline_python/tables/: cox_summaries.xlsx  quantile_models.xlsx
